<?xml version="1.0" encoding="UTF-8"?>
<project xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd" xmlns="http://maven.apache.org/POM/4.0.0"
    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
  	<modelVersion>4.0.0</modelVersion>

  	<!-- The parent pom.xml and its children were build using the website 
https://eclipse.dev/Xtext/documentation/350_continuous_integration.html#tycho-build 
and the associated git repository
https://github.com/xtext/maven-xtext-example
git@github.com:xtext/maven-xtext-example.git-->


  	<groupId>de.tu-bs.cbc</groupId>
  	<artifactId>CorC-feat-autobuild_final</artifactId>
  	<version>0.0.1-SNAPSHOT</version>
  	<packaging>pom</packaging>

  	<modules>
	    <module>de.tu-bs.cs.isf.cbc.model</module>
			<module>de.tu-bs.cs.isf.cbc.mutation</module>
			<module>de.tu-bs.cs.isf.cbc.exceptions</module>
	    <module>de.tu-bs.cs.isf.cbc.tool</module>
	    <module>de.tu-bs.cs.isf.cbc.util</module>
	    <module>de.tu-bs.cs.isf.cbcclass.tool</module>
	    <module>de.tu-bs.cs.isf.wizards</module>
	    <module>de.tu_bs.cs.isf.cbc.statistics</module>
	    <module>de.tu_bs.cs.isf.cbc.statistics.ui</module>
	    <module>de.tu_bs.cs.isf.commands.toolbar</module>
	    <module>de.tu_bs.cs.isf.cbc.parser</module>
	    <module>de.tu_bs.cs.isf.lattice</module>
	    <module>de.kit.tva.lost</module>
	</modules>

	<properties>
		<maven.compiler.source>17</maven.compiler.source>
		<maven.compiler.target>17</maven.compiler.target>
	 	<tycho-version>3.0.0</tycho-version>
	 	<xtext-version>2.31.0</xtext-version>
	    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
	    <eclipse-repo.url>https://download.eclipse.org/releases/latest</eclipse-repo.url>
	    <tycho.disableP2Mirrors>true</tycho.disableP2Mirrors>
	</properties>

	<build>
	    <pluginManagement>
	      	<plugins>

	      		<plugin>
		            <groupId>org.eclipse.tycho</groupId>
		            <artifactId>tycho-p2-director-plugin</artifactId>
		            <version>${tycho-version}</version>
	          	</plugin>

	          	<plugin>
		            <groupId>org.eclipse.tycho.extras</groupId>
		            <artifactId>tycho-eclipserun-plugin</artifactId>
		            <version>3.0.0</version>
	          	</plugin>

	          	<!-- xtend-maven-plugin is in pluginManagement instead of in plugins
		       so that it doesn't run before the exec-maven-plugin's *.mwe2 gen;
		       this way we can list it after.-->
      			
			    <plugin>
			      	<groupId>org.eclipse.xtend</groupId>
			      	<artifactId>xtend-maven-plugin</artifactId>
			      	<version>2.29.0</version>
			      	<executions>
			        	<execution>
			          		<goals>
					            <goal>compile</goal>
					            <goal>xtend-install-debug-info</goal>
					            <goal>testCompile</goal>
					            <goal>xtend-test-install-debug-info</goal>
			          		</goals>
			        	</execution>
			      	</executions>
			      	<configuration>
			        	<outputDirectory>xtend-gen</outputDirectory>
			      	</configuration>
			    </plugin>

			    <plugin>
					<groupId>org.eclipse.tycho</groupId>
					<artifactId>tycho-packaging-plugin</artifactId>
					<version>${tycho-version}</version>
					<configuration>
						<skipPomGeneration>true</skipPomGeneration>
					</configuration>
				</plugin>
				
	      	</plugins>
	    </pluginManagement>

	    <plugins>
	    	<plugin>
		        <groupId>org.eclipse.tycho</groupId>
		        <artifactId>tycho-maven-plugin</artifactId>
		        <version>${tycho-version}</version>
		        <extensions>true</extensions>
	      	</plugin>

	        <!--<plugin>
	            <artifactId>maven-failsafe-plugin</artifactId>
	            <version>2.22.2</version>
	        </plugin>-->

	      	<plugin>
		        <groupId>org.eclipse.tycho</groupId>
		        <artifactId>target-platform-configuration</artifactId>
		        <version>${tycho-version}</version>
		        <configuration>
		        <!-- Optional set the Java version you are using-->
		        <executionEnvironment>JavaSE-17</executionEnvironment>
		        	<target>
						<file>
							${project.basedir}/../targetplatform.target
						</file>
					</target>
		         	<environments>
		              	<environment>
			                <os>linux</os>
			                <ws>gtk</ws>
			                <arch>x86_64</arch>
		              	</environment>
		              	<environment>
			                <os>win32</os>
			                <ws>win32</ws>
			                <arch>x86_64</arch>
		              	</environment>
		             	<environment>
			             	<os>macosx</os>
			                <ws>cocoa</ws>
			                <arch>x86_64</arch>
		              	</environment>
		          	</environments>
	        	</configuration>
	      	</plugin>
	    </plugins>
	</build>

	<repositories>
		<repository>
	    	<id>eclipse-release</id>
		    <url>${eclipse-repo.url}</url>
		    <layout>p2</layout>
	  	</repository>
	  	<repository>
		    <id>key</id>
		    <url>https://formal.kastel.kit.edu/key/download/releases/2.6/eclipse/</url>
		    <layout>p2</layout>
	  	</repository>
	  	<repository>
		    <id>graphiti</id>
		    <url>https://download.eclipse.org/graphiti/updates/0.18.0/</url>
		    <layout>p2</layout>
	  	</repository>
	  	<repository>
	    	<id>emftext</id>
		    <url>http://update.emftext.org/release/</url>
		    <layout>p2</layout>
	  	</repository>
	  	<repository>
		    <id>featureIDE</id>
		    <url>http://featureide.cs.ovgu.de/update/v3/</url>
		    <layout>p2</layout>
	  	</repository>
	  	<repository>
		    <id>mylyn</id>
		    <url>https://download.eclipse.org/mylyn/snapshots/weekly/</url>
		    <layout>p2</layout>
	  	</repository>
	  	<repository>
		    <id>jamopp</id>
		    <url>http://update.jamopp.org/release/</url>
		    <layout>p2</layout>
	  	</repository>
	  	<repository>
		  	<id>justj</id>
		  	<url>https://download.eclipse.org/justj/jres/17/updates/release/latest/</url>
		  	<layout>p2</layout>
	  	</repository>
	  	<repository>
	  		<id>testng</id>
	  		<url>https://testng.org/testng-eclipse-update-site/</url>
	  		<layout>p2</layout>
  		</repository>
	  	
		<repository>
			<id>codehaus-snapshots</id>
			<name>disable dead 'Codehaus Snapshots' repository, see https://bugs.eclipse.org/bugs/show_bug.cgi?id=481478</name>
			<url>http://nexus.codehaus.org/snapshots/</url>
			<releases>
				<enabled>false</enabled>
			</releases>
			<snapshots>
				<enabled>false</enabled>
			</snapshots>
		</repository>
		<!-- This must be disabled explicitly, otherwise it is enabled by https://github.com/mojohaus/mojo-parent 
			which is taken from exec-maven-plugin from at least version 1.6.0 -->
		<repository>
			<id>ossrh-snapshots</id>
			<name>ossrh-snapshots</name>
			<releases>
				<enabled>false</enabled>
			</releases>
			<snapshots>
				<enabled>false</enabled>
			</snapshots>
			<url>http://oss.sonatype.org/content/repositories/snapshots</url>
		</repository>
		<!-- This is enabled by /org/sonatype/oss/oss-parent/7 used as parent by 
			org/xtext/antlr-generator/3.2.1 -->
		<repository>
			<id>sonatype-nexus-snapshots</id>
			<name>Sonatype Nexus Snapshots</name>
			<url>https://oss.sonatype.org/content/repositories/snapshots</url>
			<releases>
				<enabled>false</enabled>
			</releases>
			<snapshots>
				<enabled>false</enabled>
			</snapshots>
		</repository>
	</repositories>
	<pluginRepositories>
		<pluginRepository>
			<id>codehaus-snapshots</id>
			<name>disable dead 'Codehaus Snapshots' repository, see https://bugs.eclipse.org/bugs/show_bug.cgi?id=481478</name>
			<url>http://nexus.codehaus.org/snapshots/</url>
			<releases>
				<enabled>false</enabled>
			</releases>
			<snapshots>
				<enabled>false</enabled>
			</snapshots>
		</pluginRepository>
		<pluginRepository>
			<id>ossrh-snapshots</id>
			<name>ossrh-snapshots</name>
			<releases>
				<enabled>false</enabled>
			</releases>
			<snapshots>
				<enabled>false</enabled>
			</snapshots>
			<url>http://oss.sonatype.org/content/repositories/snapshots</url>
		</pluginRepository>
		<pluginRepository>
			<id>sonatype-nexus-snapshots</id>
			<name>Sonatype Nexus Snapshots</name>
			<url>https://oss.sonatype.org/content/repositories/snapshots</url>
			<releases>
				<enabled>false</enabled>
			</releases>
			<snapshots>
				<enabled>false</enabled>
			</snapshots>
		</pluginRepository>
	</pluginRepositories>
</project>
